<?xml version="1.0" encoding="utf-8"?>

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_movielist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/movie_list_item_container_padding"
        tools:listitem="@layout/movie_list_item"
    />

    <TextView
        android:id="@+id/textview_main_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_error_message"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_no_network_load_favourite"
        style="@style/movie_list_no_network_click_to_favourites_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        tools:visibility="visible"
    >
        <TextView
            android:id="@+id/textview_main_no_network_load_favourite_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_no_network_load_favourite_message"
        />

        <Button
            android:id="@+id/button_main_no_network_load_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_no_network_load_favourite_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_main_no_network_load_favourite_message"
        />

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressbar_main_loading"
        android:layout_width="@dimen/load_indicator_size"
        android:layout_height="@dimen/load_indicator_size"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</merge>