<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.p021popularmovies1.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_detail_error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_error_message"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textview_detail_title"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="Movie Title"/>

        <ProgressBar
            android:id="@+id/progressbar_detail_loading"
            android:layout_width="@dimen/load_indicator_size"
            android:layout_height="@dimen/load_indicator_size"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.constraint.Barrier
                android:id="@+id/movie_details_poster_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="movie_details_release_date_title,textview_detail_release_date,movie_details_user_rating_title,textview_detail_user_rating"
                />

            <TextView
                android:id="@+id/movie_details_release_date_title"
                style="@style/movie_detail_attribute_title_small_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/movie_details_release_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/movie_details_poster_barrier"
                />

            <TextView
                android:id="@+id/textview_detail_release_date"
                style="@style/movie_detail_release_date_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/movie_details_poster_barrier"
                app:layout_constraintTop_toBottomOf="@id/movie_details_release_date_title"
                tools:text="2999"/>

            <TextView
                android:id="@+id/movie_details_user_rating_title"
                style="@style/movie_detail_attribute_title_small_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details_user_rating"
                app:layout_constraintTop_toBottomOf="@+id/textview_detail_release_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/movie_details_poster_barrier"
                />

            <TextView
                android:id="@+id/textview_detail_user_rating"
                style="@style/movie_detail_user_rating_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_user_rating_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/movie_details_poster_barrier"
                tools:text="7.8"/>

            <ImageView
                android:id="@+id/imageview_detail_poster"
                android:layout_width="0dp"
                android:layout_height="300dp"
                style="@style/movie_detail_poster_style"
                app:layout_constraintDimensionRatio="W,9:16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/movie_details_poster_barrier"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/movie_details_poster_contentdescription"

                android:cropToPadding="true"
                tools:layout_height="300dp"
                tools:layout_width="200dp"
                tools:src="@android:drawable/star_big_off"
                android:scaleType="centerCrop"
                />
        </android.support.constraint.ConstraintLayout>

        <TextView
            style="@style/movie_detail_attribute_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_original_title"/>

        <TextView
            style="@style/movie_detail_attribute_value_style"
            android:id="@+id/textview_detail_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Movie Original Title"/>

        <TextView
            style="@style/movie_detail_attribute_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_details_overview"/>

        <TextView
            style="@style/movie_detail_attribute_value_style"
            android:id="@+id/textview_detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."/>


    </LinearLayout>
</ScrollView>


